<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>huybot_bringup</name>
  <version>0.1.0</version>
  <description>The huybot_bringup package</description>
  <maintainer email="buiquanghuy2kx@gmail.com">huy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>huybot_description</exec_depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>xterm</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
